--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <uses-sdk
         android:minSdkVersion="19"
         android:targetSdkVersion="25" />
-    <uses-permission android:name="android.permission.EXPAND_STATUS_BAR"/>
+
+    <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
@@ -38,6 +39,9 @@
             android:name=".BlacklistActivity"
             android:label="@string/title_activity_blacklist" >
         </activity>
+
+        <service android:name=".FloatWindowService" >
+        </service>
     </application>
 
 </manifest>
